(library (name YeelightTest) (public_name yeelight.test)
    (modules (:standard \ YeelightTestPesyModules))
    (libraries yeelight.test.pesy-modules)
    (flags -linkall -g -w -9 -open YeelightTestPesyModules))
(library (public_name yeelight.test.pesy-modules)
    (name YeelightTestPesyModules) (modules YeelightTestPesyModules)
    (libraries rely.lib yeelight.library))
(rule
    (with-stdout-to YeelightTestPesyModules.re
        (run echo  "module Library = YeelightLibrary;\
                  \nmodule Rely = Rely;")))
