(executable (name RunYeelightTests)
    (modules (:standard \ YeelightTestExePesyModules))
    (public_name RunYeelightTests.exe)
    (libraries yeelight.testExe.pesy-modules)
    (flags -open YeelightTestExePesyModules))
(library (public_name yeelight.testExe.pesy-modules)
    (name YeelightTestExePesyModules) (modules YeelightTestExePesyModules)
    (libraries yeelight.test))
(rule
    (with-stdout-to YeelightTestExePesyModules.re
        (run echo "module Test = YeelightTest;")))
